# ru-it-audit-notebook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
checklists/: app_1c.yaml  backup_resilience.yaml  inventory.yaml  kii_basic.yaml  pdn_152fz.yaml  scoring_profiles.yaml
examples/inputs/: sample_answers_backup.yaml  sample_answers_pdn.yaml
examples/inventory/: sample_inventory.csv  sample_inventory.yaml
examples/outputs/: sample_report_ru.html
it_audit_report/: __init__.py  checklist_loader.py  config.py  models.py  scoring.py
it_audit_report/ai/: __init__.py  ai_provider.py  models.py  summary_generator.py  workplan_generator.py
it_audit_report/cli/: helpers.py  main.py
it_audit_report/inventory/: __init__.py  collectors.py
it_audit_report/report/: __init__.py  context_builder.py  html_exporter.py  markdown_renderer.py  pdf_exporter.py
notebooks/: 00_inventory_servers.ipynb  01_pdn_152fz_checklist.ipynb  02_backup_resilience_checklist.ipynb  03_kii_basic_checklist.ipynb  04_applications_1c_business.ipynb  99_report_assembler.ipynb
scripts/: dev_run_all_tests.sh  lint.sh  perf_check.sh  security_scan.sh
templates/report/: executive_summary_template.md.j2  html_template.tpl  pdf_latex_template.tpl  risk_register_template.md.j2  technical_appendix_template.md.j2
tests/integration/: test_full_flow_checklists_to_report.py  test_full_flow_inventory_to_report.py
tests/unit/: test_ai_summary_generator.py  test_checklist_loader.py  test_cli_build_report.py  (+3 more)
(+5 files in other folders)
